Fixed suitcase collapsible menu issue where it wouldnt collapse

--- a/css/suitcase.css
+++ b/css/suitcase.css
@@ -1348,6 +1348,10 @@ aside ::-webkit-scrollbar-thumb {
     .zone-footer .block-menu-footer {
         float: none;
     }
+
+    nav.navigation li.main-menu-dropdown-item.hide {
+        display: none;
+    }
 }
 
 @media all and (max-width: 979px) {
