--- a/css/suitcase_default.css
+++ b/css/suitcase_default.css
@@ -34,4 +34,8 @@
     .view-display-id-people_grid .views-row-even {
         background-color: rgba(255, 255, 255, 0.7) !important;
     }
+
+    #suitcase-main-menu-dropdown-toggle {
+        display: none;
+    }
 }
